--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "express": "^4.18.1",
     "nedb": "^1.8.0",
     "next": "12.1.6",
@@ -16,6 +17,8 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
   }
