--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel": "^6.23.0",
     "express": "^4.18.1",
+    "git": "^0.1.5",
     "nedb": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
