--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel": "^6.23.0",
     "express": "^4.18.1",
     "git": "^0.1.5",
+    "mime": "^3.0.0",
     "nedb": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
