--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.2",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6"
