--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"],
+  "extends": [
+    "next"
+  ],
   "rules": {
     "@next/next/no-img-element": "off"
   }
