--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "express": "^4.18.1",
     "git": "^0.1.5",
     "mime": "^3.0.0",
